# startup-tabletop

./: .gitignore  pyproject.toml  rulebook.md
agents/: heuristic_agent.py  random_agent.py
env/: action_space.py  observation_space.py  reward.py  startup_env.py
notebooks/: train_colab.ipynb
startup_simulator/: __main__.py  card_registry.py  cards.py  engine.py  modifiers.py  recorder.py  replay.py  rng.py  state.py  types.py  viewer.py
startup_simulator/actions/: base.py  combat_actions.py  free_actions.py  management_actions.py  product_actions.py  talent_actions.py  validator.py
startup_simulator/phases/: audit_phase.py  engine_phase.py  event_phase.py  income_phase.py  scoring.py
tests/: test_cards.py  test_engine.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
training/: callbacks.py  evaluate.py  frozen_pool_env.py  selfplay_env.py  tournament_env.py  train_pool.py  train_rllib.py  train_sb3.py  train_tournament.py
